# another_glfw_test

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Window.hpp
src/: Window.cpp  main.cpp
